point to section VI-F-2 where the celebA classification will go

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -120,7 +120,7 @@ Notwithstanding this, in the revised paper, we have now included synthesized exa
 \end{figure}
 
 
-In addition, we have introduced new experiments in facial expression classification based on colour faces; these were not present in the original paper.  These experiments are to be found in \hl{Section XX}.
+In addition, we have introduced new experiments in facial expression classification based on colour faces; these were not present in the original paper.  These experiments are to be found in {\color{red} Section VI-F-2}.
 
 {\color{blue}
 The reconstruction results are not so interesting and some of them can be removed. In addition, the reconstruction results on MNIST and Omniglot are inconsistent, which should be analysed in depth. Current version does not provide insight for the phenomena.}\\
