fix points about datasets used in previous work

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -109,11 +109,13 @@ The experiments are restricted on simple datasets, which are out of date. In con
 Our choice of datasets was explained in Section VI.B of the original submission.  We acknowledge that in one sense the data might be regarded as simple, but please note that 
 \begin{itemize}
     \item the sprites dataset (of the orignal paper) is a {\em colour} dataset
-    \item the AAE paper \cite{} presented results on MNIST, SVHN and heavily cropped faces of the Fray dataset, none of which are in colour.
-    \item Kingma's VAE paper presents results on Fray and MNIST.
+    \item the AAE paper \{makhzani2015adversarial\} presented {\color{synthesis}} results on MNIST, SVHN and heavily cropped faces of the Fray dataset, none of which are in colour.
+    \item Kingma's VAE paper presents {\color{syntheis}} results on Fray and MNIST.
     \item the DVAE paper contains no images at all
 \end{itemize}. 
 Notwithstanding this, in the revised paper, we have now included synthesized examples of colour faces. For ease of reference, we show some examples of synthesized images below:\\
+
+{\color{red} TODO -- use figures finally used in paper}
 
 \begin{figure}
 
