addressing log-likeihood questions

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -136,7 +136,6 @@ We are interested in reconstruction for several reasons. The first is that if we
 \end{quote}
 
 We have however significantly increased the evaluation, by including experiments on facial attribute classification on colour faces.
-
 }
 
 
@@ -154,7 +153,7 @@ and these were the corresponding references:
 [2] Salimans T, Goodfellow I, Zaremba W, et al. Improved techniques for training gans[C]//Advances in Neural Information Processing Systems. 2016: 2234-2242.\newline
 [3] Wu Y, Burda Y, Salakhutdinov R, et al. On the quantitative analysis of decoder-based generative models[J]. arXiv preprint arXiv:1611.04273, 2016.\newline
 
-For this reason, we provided both quantitative and qualitative results to communicate the benefits of introducing Markov chain sampling with a DAAE, and the advantages of iDAAEs over AAEs.  We hope that the revised version of the paper -- with larger face synthesis and experiments on \hl{expression} classification -- further emphasises these points. \\
+For this reason, we provided both quantitative and qualitative results to communicate the benefits of introducing Markov chain sampling with a DAAE, and the advantages of iDAAEs over AAEs.  We hope that the revised version of the paper -- with larger face synthesis and experiments on {\color{red} facial attribute} classification -- further emphasises these points. \\
 
 We would also like to point, once again, to the demonstration of the Omniglot dataset, which contains examples of alphabets that are completely absent from the training data. We have since shifted the classification results into one table, so that it is clear that there are separate datasets in Omniglot. Notably (and this is something that enforces the reviewers point):
 
